[project]
name = "autumn-sdk"
version = "0.2.23"
description = "Python SDK for the Autumn billing API"
authors = [{ name = "Autumn" },]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "pydantic >=2.11.2",
]
license = { text = "Apache-2.0" }

[dependency-groups]
dev = [
    "mypy ==1.15.0",
    "pylint ==3.2.3",
    "pyright ==1.1.398",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


