[project]
name = "autumn-sdk"
version = "1.0.0"
description = "The official Python SDK for the Autumn billing API"
authors = [{ name = "Autumn", email = "hey@useautumn.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "pydantic >=2.11.2",
]
license = "Apache-2.0"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://useautumn.com"
Documentation = "https://docs.useautumn.com"
Repository = "https://github.com/useautumn/autumn"

[dependency-groups]
dev = [
    "mypy ==1.15.0",
    "pylint ==3.2.3",
    "pyright ==1.1.398",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


